@startuml

title __SERVICE's Class Diagram__\n

  namespace com.anto.gpstrack {
    namespace service {
      class com.anto.gpstrack.service.AccessTokenService {
          {static} - EXPIRATION_TIMEOUT : long
          + AccessTokenService()
          + generateToken()
          + getByValue()
          + isValid()
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace service {
      class com.anto.gpstrack.service.PhoneService {
          + PhoneService()
          + clearData()
          + getAll()
          + getPhone()
          + register()
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace service {
      class com.anto.gpstrack.service.PositionService {
          + PositionService()
          + getWithinInterval()
          + registerPosition()
      }
    }
  }
  

  com.anto.gpstrack.service.AccessTokenService o-- com.anto.gpstrack.repositories.AccessTokenRepository : repository
  com.anto.gpstrack.service.PhoneService o-- com.anto.gpstrack.repositories.PhoneRepository : phoneRepository
  com.anto.gpstrack.service.PhoneService o-- com.anto.gpstrack.repositories.PositionRepository : positionRepository
  com.anto.gpstrack.service.PositionService o-- com.anto.gpstrack.repositories.PhoneRepository : phoneRepository
  com.anto.gpstrack.service.PositionService o-- com.anto.gpstrack.repositories.PositionRepository : repository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
